# SimTrace

./: Cargo.toml  PROGRESS.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md  plugin-guide.md
src/: main.rs
src/coach/: analyzer.rs  centerline.rs  corner.rs  downloader.rs  events.rs  lap.rs  llm.rs  mod.rs  reference.rs  rephraser.rs  track_map.rs  tts.rs
src/config/: mod.rs  settings.rs  window.rs
src/core/: buffer.rs  collector.rs  lap_store.rs  mod.rs  model.rs
src/plugins/: mod.rs  registry.rs  trait_.rs
src/plugins/ams2/: ams2_plugin.rs  mod.rs  shared_memory.rs
src/plugins/assetto_competizione/: acc_plugin.rs  mapping.rs  mock_plugin.rs  mod.rs  shared_memory.rs
src/plugins/iracing/: iracing_plugin.rs  mod.rs  shared_memory.rs
src/plugins/mock/: mod.rs
src/renderer/: app.rs  lap_comparison.rs  mod.rs  overlay.rs  phase_plot.rs  steering_wheel.rs  trace_graph.rs  track_map_panel.rs
