[package]
name = "simtrace"
version = "0.1.0"
edition = "2021"
description = "Sim racing telemetry visualization tool"
authors = ["SimTrace Contributors"]

[dependencies]
# GUI
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Error handling
anyhow = "1.0"

# JSON serialisation (track maps, reference laps)
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Platform directories
dirs = "5.0"

# Shared memory (Windows)
[target.'cfg(windows)'.dependencies]
memmap2 = "0.9"
winapi = { version = "0.3", features = ["winnt", "handleapi", "memoryapi", "errhandlingapi"] }

